Fix loader not covering entire screen

--- a/src/components/Loader.scss
+++ b/src/components/Loader.scss
@@ -4,14 +4,16 @@
 $border-width: 8px;
 
 .loader {
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
+    width: 100%;
+    height: 100%;
 
     background-color: $shadow-color-light;
 
